--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,4 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-MveMovie5-7C31FDA7-4CF6-429D-818E-3EB609B24E7D;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-1;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MveMovie5Context": "Server=(localdb)\\mssqllocaldb;Database=MveMovie5Context-c8dbdd86-011c-4d9a-8d8a-e847d3f908b3;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
